# groonga-edit-distance

./: Makefile.am  README.md  clean.sh  configure.ac
functions/: Makefile.am  edit_distance.c
test/suite/damerau_edit_distance/: deletion.expected  deletion.test  disable_transposition.expected  disable_transposition.test  insertion.expected  insertion.test  substitution.expected  substitution.test  transposition.expected  transposition.test
test/suite/edit_distance_distance_bp/: deletion.expected  deletion.test  disable_transposition.expected  disable_transposition.test  insertion.expected  insertion.test  substitution.expected  substitution.test  swap.expected  swap.test  transposition.expected  transposition.test
test/suite/edit_distance_distance_bp_var/: deletion.expected  deletion.test  disable_cache.expected  disable_cache.test  disable_transposition.expected  disable_transposition.test  insertion.expected  insertion.test  substitution.expected  substitution.test  swap.actual  swap.test  transposition.expected  transposition.test
